Ignore swp files since its read only

--- a/.vimrc.less
+++ b/.vimrc.less
@@ -26,3 +26,9 @@ nmap <Down> <C-E>
 nmap ^V <C-F><C-G>
 
 autocmd VimEnter * AirlineToggle
+
+" Change swp file directory to ignore swp file from real vim
+set directory=/tmp//
+
+" No need to create swap files
+set noswapfile
